@@ -9,7 +9,7 @@
 # the same distribution terms as the rest of that program.
 #
 # Generated by gnulib-tool.
-# Reproduce by: gnulib-tool --import --dir=. --local-dir=.//home/martin/projects/gnulib/gnulib-local --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --doc-base=doc --tests-base=tests --aux-dir=build-aux --avoid=xalloc-die --no-libtool --macro-prefix=gl arpa_inet base64 c-ctype close connect crypto/hmac-md5 crypto/md5 fsync getaddrinfo gethostname getopt getpass-gnu gettext gettimeofday havelib link nanosleep netdb recv select send setsockopt sigaction signal sigpipe sigprocmask socket sockets socklen stdio strerror sys_stat sys_wait sysexits write xalloc xstrndup xvasprintf
+# Reproduce by: gnulib-tool --import --dir=. --local-dir=home/martin/projects/gnulib/gnulib-local --lib=libgnu --source-base=gnulib --m4-base=gnulib/m4 --doc-base=doc --tests-base=tests --aux-dir=build-aux --avoid=fseek --avoid=fseeko --avoid=ftruncate --avoid=xalloc-die --no-libtool --macro-prefix=gl --no-vc-files arpa_inet base64 c-ctype close connect crypto/hmac-md5 crypto/md5 fseek fsync ftruncate getaddrinfo gethostname getopt getpass-gnu gettext gettimeofday havelib link nanosleep netdb recv select send setsockopt sigaction signal sigpipe sigprocmask socket sockets socklen stdio strerror sys_stat sys_wait sysexits write xalloc xstrndup xvasprintf
 
 AUTOMAKE_OPTIONS = 1.5 gnits
 
@@ -28,6 +28,7 @@ MAINTAINERCLEANFILES =
 EXTRA_DIST += m4/gnulib-cache.m4
 
 AM_CPPFLAGS =
+AM_CFLAGS =
 
 noinst_LIBRARIES += libgnu.a
 
@@ -198,15 +199,6 @@ EXTRA_DIST += float.in.h
 
 ## end   gnulib module float
 
-## begin gnulib module fseeko
-
-
-EXTRA_DIST += fseeko.c stdio-impl.h
-
-EXTRA_libgnu_a_SOURCES += fseeko.c
-
-## end   gnulib module fseeko
-
 ## begin gnulib module fsync
 
 
@@ -359,15 +351,6 @@ LINK_WARNING_H=$(top_srcdir)/build-aux/link-warning.h
 EXTRA_DIST += $(top_srcdir)/build-aux/link-warning.h
 
 ## end   gnulib module link-warning
-
-## begin gnulib module lseek
-
-
-EXTRA_DIST += lseek.c
-
-EXTRA_libgnu_a_SOURCES += lseek.c
-
-## end   gnulib module lseek
 
 ## begin gnulib module memxor
 
